syntax = "proto3";

package vdp.connector.v1alpha;

import "../../../common/healthcheck/v1alpha/healthcheck.proto";
import "../../../common/task/v1alpha/task.proto";
import "google/api/field_behavior.proto";
// Google API
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
// Protocol Buffers Well-Known Types
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "../../../vdp/connector/v1alpha/connector_definition.proto";

// LivenessRequest represents a request to check a service liveness status
message LivenessRequest {
  // HealthCheckRequest message
  optional common.healthcheck.v1alpha.HealthCheckRequest health_check_request = 1 [(google.api.field_behavior) = OPTIONAL];
}

// LivenessResponse represents a response for a service liveness status
message LivenessResponse {
  // HealthCheckResponse message
  common.healthcheck.v1alpha.HealthCheckResponse health_check_response = 1;
}

// ReadinessRequest represents a request to check a service readiness status
message ReadinessRequest {
  // HealthCheckRequest message
  optional common.healthcheck.v1alpha.HealthCheckRequest health_check_request = 1 [(google.api.field_behavior) = OPTIONAL];
}

// ReadinessResponse represents a response for a service readiness status
message ReadinessResponse {
  // HealthCheckResponse message
  common.healthcheck.v1alpha.HealthCheckResponse health_check_response = 1;
}

// ConnectorResource represents a connector_resource data model
message ConnectorResource {
  // State enumerates the connector_resource state
  enum State {
    // State: UNSPECIFIED
    STATE_UNSPECIFIED = 0;
    // State: DISCONNECTED
    STATE_DISCONNECTED = 1;
    // State: CONNECTED
    STATE_CONNECTED = 2;
    // State: ERROR
    STATE_ERROR = 3;
  }

  // ConnectorResource visibility including public or private
  enum Visibility {
    // Visibility: UNSPECIFIED, equivalent to PRIVATE.
    VISIBILITY_UNSPECIFIED = 0;
    // Visibility: PRIVATE
    VISIBILITY_PRIVATE = 1;
    // Visibility: PUBLIC
    VISIBILITY_PUBLIC = 2;
  }

  option (google.api.resource) = {
    type: "api.instill.tech/ConnectorResource"
    pattern: "connector-resources/{connector_resource}"
  };

  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource UUID
  string uid = 2 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource resource ID (the last segment of the resource name)
  // used to construct the resource name. This conforms to RFC-1034, which
  // restricts to letters, numbers, and hyphen, with the first character a
  // letter, the last a letter or a number, and a 63 character maximum.
  string id = 3 [(google.api.field_behavior) = IMMUTABLE];
  // ConnectorDefinition resource
  string connector_definition_name = 4 [
    (google.api.field_behavior) = IMMUTABLE,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorDefinition"}
  ];
  // ConnectorResource Type
  ConnectorType connector_type = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource description
  common.task.v1alpha.Task task = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource description
  optional string description = 7 [(google.api.field_behavior) = OPTIONAL];
  // ConnectorResource configuration in JSON format
  google.protobuf.Struct configuration = 8 [(google.api.field_behavior) = REQUIRED];
  // ConnectorResource state
  State state = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource tombstone
  bool tombstone = 10 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource owner
  oneof owner {
    // The resource name with UUID of a user, e.g.,
    // "users/bfb978f8-78d3-4338-aa2b-a6c699cb07c5".
    string user = 11 [
      (google.api.resource_reference).type = "api.instill.tech/User",
      (google.api.field_behavior) = OUTPUT_ONLY
    ];
    // The resource name with UUID of an organization
    string org = 12 [
      (google.api.resource_reference).type = "api.instill.tech/Organization",
      (google.api.field_behavior) = OUTPUT_ONLY
    ];
  }
  // ConnectorResource creation time
  google.protobuf.Timestamp create_time = 13 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource update time
  google.protobuf.Timestamp update_time = 14 [(google.api.field_behavior) = OUTPUT_ONLY];
  // ConnectorResource visibility including public or private
  Visibility visibility = 15 [(google.api.field_behavior) = OUTPUT_ONLY];
  // Embed the content of the connector_definition
  ConnectorDefinition connector_definition = 16 [(google.api.field_behavior) = OUTPUT_ONLY];
}

///////////////////////////////////////////////////////////////////////
// RPC messages
///////////////////////////////////////////////////////////////////////

// CreateConnectorResourceRequest represents a request to create a
// ConnectorResource resource
message CreateConnectorResourceRequest {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1 [(google.api.field_behavior) = REQUIRED];
}

// CreateConnectorResourceResponse represents a response for a
// ConnectorResource resource
message CreateConnectorResourceResponse {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// ListConnectorResourcesRequest represents a request to list
// ConnectorResource resources
message ListConnectorResourcesRequest {
  // The maximum number of connector-resources to return. The service may return fewer
  // than this value. If unspecified, at most 10 connector-resources will be returned.
  // The maximum value is 100; values above 100 will be coerced to 100.
  optional int64 page_size = 1 [(google.api.field_behavior) = OPTIONAL];
  // Page token
  optional string page_token = 2 [(google.api.field_behavior) = OPTIONAL];
  // ConnectorResource view (default is VIEW_BASIC)
  optional View view = 3 [(google.api.field_behavior) = OPTIONAL];
  // Filter expression to list connector-resources
  optional string filter = 4 [(google.api.field_behavior) = OPTIONAL];
}

// ListConnectorResourcesResponse represents a response for a list of
// ConnectorResource resources
message ListConnectorResourcesResponse {
  // A list of ConnectorResource resources
  repeated ConnectorResource connector_resources = 1;
  // Next page token
  string next_page_token = 2;
  // Total count of connector_resource resources
  int64 total_size = 3;
}

// GetConnectorResourceRequest represents a request to query a
// ConnectorResource resource
message GetConnectorResourceRequest {
  // ConnectorResourceConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorResource"},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "connector_resource.name"}
    }
  ];
  // ConnectorResource view (default is VIEW_BASIC)
  optional View view = 3 [(google.api.field_behavior) = OPTIONAL];
}

// GetConnectorResourceResponse represents a response for a
// ConnectorResource resource
message GetConnectorResourceResponse {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// UpdateConnectorResourceRequest represents a request to update a
// ConnectorResource resource
message UpdateConnectorResourceRequest {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1 [(google.api.field_behavior) = REQUIRED];
  // Update mask for a ConnectorResource resource
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];
}

// UpdateConnectorResourceResponse represents a response for a
// ConnectorResource resource
message UpdateConnectorResourceResponse {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// DeleteConnectorResourceRequest represents a request to delete a
// ConnectorResource resource
message DeleteConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorResource"},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "connector_resource.name"}
    }
  ];
}

// DeleteConnectorResourceResponse represents an empty response
message DeleteConnectorResourceResponse {}

// LookUpConnectorResourceRequest represents a request to query a
// connector_resource via permalink
message LookUpConnectorResourceRequest {
  // Permalink of a connector_resource. For example:
  // "connector-resources/{uid}"
  string permalink = 1 [(google.api.field_behavior) = REQUIRED];
  // ConnectorResource view (default is VIEW_BASIC)
  optional View view = 2 [(google.api.field_behavior) = OPTIONAL];
}

// LookUpConnectorResourceResponse represents a response for a
// connector_resource
message LookUpConnectorResourceResponse {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// ConnectConnectorResourceRequest represents a request to connect a
// connector_resource
message ConnectConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorResource"}
  ];
}

// ConnectConnectorResourceResponse represents a connected
// connector_resource
message ConnectConnectorResourceResponse {
  // A ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// DisconnectConnectorResourceRequest represents a request to disconnect a
// connector_resource
message DisconnectConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorResource"}
  ];
}

// DisconnectConnectorResourceResponse represents a disconnected
// connector_resource
message DisconnectConnectorResourceResponse {
  // A ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// RenameConnectorResourceRequest represents a request to rename the
// ConnectorResource resource name
message RenameConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/ConnectorResource"}
  ];
  // ConnectorResource new resource id to replace with the
  // ConnectorResource resource name to be
  // "connector-resources/{new_connector_id}"
  string new_connector_id = 2 [(google.api.field_behavior) = REQUIRED];
}

// RenameConnectorResourceResponse represents a renamed ConnectorResource
// resource
message RenameConnectorResourceResponse {
  // A ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// ========== Private endpoints

// ListConnectorResourcesAdminRequest represents a request to list
// ConnectorResource resources from all users by admin
message ListConnectorResourcesAdminRequest {
  // The maximum number of connector-resources to return. The service may return fewer
  // than this value. If unspecified, at most 10 connector-resources will be returned.
  // The maximum value is 100; values above 100 will be coerced to 100.
  optional int64 page_size = 1 [(google.api.field_behavior) = OPTIONAL];
  // Page token
  optional string page_token = 2 [(google.api.field_behavior) = OPTIONAL];
  // ConnectorResource view (default is VIEW_BASIC)
  optional View view = 3 [(google.api.field_behavior) = OPTIONAL];
  // Filter expression to list connector-resources
  optional string filter = 4 [(google.api.field_behavior) = OPTIONAL];
}

// ListConnectorResourcesAdminResponse represents a response for a list of
// ConnectorResource resources
message ListConnectorResourcesAdminResponse {
  // A list of ConnectorResource resources
  repeated ConnectorResource connector_resources = 1;
  // Next page token
  string next_page_token = 2;
  // Total count of connector_resource resources
  int64 total_size = 3;
}

// LookUpConnectorResourceAdminRequest represents a request to query a
// connector_resource via permalink by admin
message LookUpConnectorResourceAdminRequest {
  // Permalink of a connector_resource. For example:
  // "connector-resources/{uid}"
  string permalink = 1 [(google.api.field_behavior) = REQUIRED];
  // ConnectorResource view (default is VIEW_BASIC)
  optional View view = 2 [(google.api.field_behavior) = OPTIONAL];
}

// LookUpConnectorResourceAdminResponse represents a response for a
// connector_resource
message LookUpConnectorResourceAdminResponse {
  // ConnectorResource resource
  ConnectorResource connector_resource = 1;
}

// WatchConnectorResourceRequest represents a public request to query
// a connector_resource's current state
message WatchConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ConnectorResource",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "connector_resource.name"}
    }
  ];
}

// WatchConnectorResourceResponse represents a response to fetch a
// connector_resource's current state
message WatchConnectorResourceResponse {
  // Retrieved connector_resource state
  ConnectorResource.State state = 1;
}

// CheckConnectorResourceRequest represents a private request to query
// a connector_resource's current state
message CheckConnectorResourceRequest {
  // Permalink of a connector_resource. For example:
  // "connector-resources/{uid}"
  string permalink = 1 [(google.api.field_behavior) = REQUIRED];
}

// CheckConnectorResourceResponse represents a response to fetch a
// connector_resource's current state
message CheckConnectorResourceResponse {
  // Retrieved connector_resource state
  ConnectorResource.State state = 1;
}

// TestConnectorResourceRequest represents a public request to trigger check
// action on a connector_resource
message TestConnectorResourceRequest {
  // ConnectorResource resource name. It must have the format of
  // "connector-resources/*"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ConnectorResource",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "connector_resource.name"}
    }
  ];
}

// TestConnectorResourceResponse represents a response containing a
// connector_resource's current state
message TestConnectorResourceResponse {
  // Retrieved connector_resource state
  ConnectorResource.State state = 1;
}

// ExecuteConnectorResourceRequest represents a private request to execution
// connector_resource
message ExecuteConnectorResourceRequest {
  // Name of a connector_resource. For example:
  // "connector-resources/{name}"
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Inputs
  repeated google.protobuf.Struct inputs = 2;
}

// ExecuteConnectorResourceResponse represents a response for execution
// output
message ExecuteConnectorResourceResponse {
  // Outputs
  repeated google.protobuf.Struct outputs = 1;
}
