syntax = "proto3";

package vdp.connector.v1alpha;

// Google API
import "google/api/annotations.proto";
import "google/api/client.proto";
import "../../../vdp/connector/v1alpha/connector.proto";
import "../../../vdp/connector/v1alpha/connector_definition.proto";

// Connector service responds to internal access
service ConnectorPrivateService {
  // LookUpConnectorDefinitionAdmin method receives a
  // LookUpConnectorDefinitionAdminRequest message and returns a
  // LookUpConnectorDefinitionAdminResponse
  rpc LookUpConnectorDefinitionAdmin(LookUpConnectorDefinitionAdminRequest) returns (LookUpConnectorDefinitionAdminResponse) {
    option (google.api.http) = {get: "/v1alpha/admin/{permalink=connector-definitions/*}/lookUp"};
    option (google.api.method_signature) = "permalink";
  }

  // ListConnectorResourcesAdmin method receives a ListConnectorResourcesAdminRequest
  // message and returns a ListConnectorResourcesResponse message.
  rpc ListConnectorResourcesAdmin(ListConnectorResourcesAdminRequest) returns (ListConnectorResourcesAdminResponse) {
    option (google.api.http) = {get: "/v1alpha/admin/connector-resources"};
  }

  // LookUpConnectorResourceAdmin method receives a
  // LookUpConnectorResourceAdminRequest message and returns a
  // LookUpConnectorResourceAdminResponse
  rpc LookUpConnectorResourceAdmin(LookUpConnectorResourceAdminRequest) returns (LookUpConnectorResourceAdminResponse) {
    option (google.api.http) = {get: "/v1alpha/admin/{permalink=connector-resources/*}/lookUp"};
    option (google.api.method_signature) = "permalink";
  }

  // CheckConnectorResource method receives a CheckConnectorResourceRequest message and returns a
  // CheckConnectorResourceResponse
  rpc CheckConnectorResource(CheckConnectorResourceRequest) returns (CheckConnectorResourceResponse) {
    option (google.api.http) = {get: "/v1alpha/admin/{permalink=connector-resources/*}/check"};
    option (google.api.method_signature) = "permalink";
  }
}
